--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /exercicio1/build/
 /exercicio2/nbproject/private/
 /exercicio2/build/
+/exercicio3/nbproject/private/
+/exercicio3/build/
+/exercicio4/nbproject/private/
+/exercicio5/nbproject/private/
+/exercicio04/nbproject/private/
