--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /exercicio5/nbproject/private/
 /exercicio04/nbproject/private/
 /exercicio 6/nbproject/private/
+/exercicio7/nbproject/private/
+/exercicio7/build/
