--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /exercicio7/nbproject/private/
 /exercicio7/build/
 /exercicio8/nbproject/private/
+/exercicio9/nbproject/private/
+/exercicio9/build/
